// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Explorer/Login Connect Advice 1`] = `
<div
  className="login"
>
  <nav
    className="nav-bar"
  >
    <div
      className="nav-bar-content"
    >
      <div
        className="nav-text nav-need-support"
      >
        <span>
          Need support?
        </span>
      </div>
      <a
        className="nav-discord"
        href="https://dcl.gg/discord"
        target="about:blank"
      >
        <img
          alt="Discord"
          className="nav-discord-img"
          src="images/decentraland-connect/Discord.png"
        />
        <span
          className="nav-text nav-discord-text"
        >
          JOIN OUR DISCORD
        </span>
      </a>
    </div>
  </nav>
  <div
    className="eth-login-popup"
  >
    <img
      alt="Decentraland"
      className="eth-login-logo"
      src="images/decentraland-connect/Isologotipo.png"
    />
    <div
      className="eth-login-description"
    >
      Please, follow the instructions provided by your Ethereum wallet provider to complete login.
      <br />
      To proceed, 
      <strong>
        login
      </strong>
       into your wallet and confirm with
       
      <strong>
        connecting
      </strong>
       to your Ethereum wallet extension.
    </div>
    <button
      className="eth-login-confirm-button1"
    >
      <img
        alt=""
        className="eth-login-wallet-icon"
        src="images/decentraland-connect/walletIcon.png"
      />
      Connect wallet
    </button>
  </div>
  <footer
    className="footer-bar"
  >
    <div
      className="footer-bar-content"
    >
      <a
        className="footer-link"
        href="https://dcl.gg/discord"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Discord.png"
        />
      </a>
      <a
        className="footer-link"
        href="https://www.reddit.com/r/decentraland/"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Reddit.png"
        />
      </a>
      <a
        className="footer-link"
        href="http://github.com/decentraland"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Git.png"
        />
      </a>
      <a
        className="footer-link"
        href="https://twitter.com/decentraland"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Twitter.png"
        />
      </a>
      <span
        className="footer-text"
      >
        © 2020 Decentraland
      </span>
    </div>
  </footer>
</div>
`;

exports[`Storyshots Explorer/Login Loading State 1`] = `
<div
  className="login"
>
  <nav
    className="nav-bar"
  >
    <div
      className="nav-bar-content"
    >
      <div
        className="nav-text nav-need-support"
      >
        <span>
          Need support?
        </span>
      </div>
      <a
        className="nav-discord"
        href="https://dcl.gg/discord"
        target="about:blank"
      >
        <img
          alt="Discord"
          className="nav-discord-img"
          src="images/decentraland-connect/Discord.png"
        />
        <span
          className="nav-text nav-discord-text"
        >
          JOIN OUR DISCORD
        </span>
      </a>
    </div>
  </nav>
  <div
    className="eth-login-popup"
  >
    <img
      alt="Decentraland"
      className="eth-login-logo"
      src="images/decentraland-connect/Isologotipo.png"
    />
    <div
      className="eth-login-description"
    >
      Enter the first virtual world fully owned by its users.
    </div>
    <div
      className="loader"
      id="eth-login-confirmation-spinner"
      style={
        Object {
          "display": "block",
        }
      }
    >
       
    </div>
  </div>
  <footer
    className="footer-bar"
  >
    <div
      className="footer-bar-content"
    >
      <a
        className="footer-link"
        href="https://dcl.gg/discord"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Discord.png"
        />
      </a>
      <a
        className="footer-link"
        href="https://www.reddit.com/r/decentraland/"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Reddit.png"
        />
      </a>
      <a
        className="footer-link"
        href="http://github.com/decentraland"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Git.png"
        />
      </a>
      <a
        className="footer-link"
        href="https://twitter.com/decentraland"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Twitter.png"
        />
      </a>
      <span
        className="footer-text"
      >
        © 2020 Decentraland
      </span>
    </div>
  </footer>
</div>
`;

exports[`Storyshots Explorer/Login Sign Advice 1`] = `
<div
  className="login"
>
  <nav
    className="nav-bar"
  >
    <div
      className="nav-bar-content"
    >
      <div
        className="nav-text nav-need-support"
      >
        <span>
          Need support?
        </span>
      </div>
      <a
        className="nav-discord"
        href="https://dcl.gg/discord"
        target="about:blank"
      >
        <img
          alt="Discord"
          className="nav-discord-img"
          src="images/decentraland-connect/Discord.png"
        />
        <span
          className="nav-text nav-discord-text"
        >
          JOIN OUR DISCORD
        </span>
      </a>
    </div>
  </nav>
  <div
    className="eth-login-popup"
  >
    <img
      alt="Decentraland"
      className="eth-login-logo"
      src="images/decentraland-connect/Isologotipo.png"
    />
    <div
      className="eth-login-description"
    >
      Please, follow the instructions provided by your Ethereum wallet provider to complete login.
    </div>
    <div
      className="eth-login-description"
      style={
        Object {
          "marginTop": "10px",
        }
      }
    >
      To proceed, confirm 
      <strong>
        signing
      </strong>
       the following message in your wallet extension.
    </div>
  </div>
  <footer
    className="footer-bar"
  >
    <div
      className="footer-bar-content"
    >
      <a
        className="footer-link"
        href="https://dcl.gg/discord"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Discord.png"
        />
      </a>
      <a
        className="footer-link"
        href="https://www.reddit.com/r/decentraland/"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Reddit.png"
        />
      </a>
      <a
        className="footer-link"
        href="http://github.com/decentraland"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Git.png"
        />
      </a>
      <a
        className="footer-link"
        href="https://twitter.com/decentraland"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Twitter.png"
        />
      </a>
      <span
        className="footer-text"
      >
        © 2020 Decentraland
      </span>
    </div>
  </footer>
</div>
`;

exports[`Storyshots Explorer/Login Sign In Disabled 1`] = `
<div
  className="login"
>
  <nav
    className="nav-bar"
  >
    <div
      className="nav-bar-content"
    >
      <div
        className="nav-text nav-need-support"
      >
        <span>
          Need support?
        </span>
      </div>
      <a
        className="nav-discord"
        href="https://dcl.gg/discord"
        target="about:blank"
      >
        <img
          alt="Discord"
          className="nav-discord-img"
          src="images/decentraland-connect/Discord.png"
        />
        <span
          className="nav-text nav-discord-text"
        >
          JOIN OUR DISCORD
        </span>
      </a>
    </div>
  </nav>
  <div
    className="eth-login-popup"
  >
    <img
      alt="Decentraland"
      className="eth-login-logo"
      src="images/decentraland-connect/Isologotipo.png"
    />
    <div
      className="eth-login-description"
    >
      Enter the first virtual world fully owned by its users.
    </div>
    <div
      id="eth-login-confirmation-wrapper"
    >
      <div
        className="eth-login-tos"
      >
        <input
          checked={false}
          className="eth-login-tos-agree"
          id="agree-check"
          type="checkbox"
        />
        <label
          className="eth-login-tos-label"
          htmlFor="agree-check"
        >
          I am of legal age and I have read and agree to the
           
          <a
            href="https://decentraland.org/terms"
            rel="noopener noreferrer"
            target="_blank"
          >
            Terms of Service
          </a>
           
          and
           
          <a
            href="https://decentraland.org/privacy"
            rel="noopener noreferrer"
            target="_blank"
          >
            Privacy Policy
          </a>
        </label>
      </div>
      <button
        className="eth-login-confirm-button1"
        disabled={true}
        id="eth-login-confirm-button"
      >
        Start Exploring
      </button>
    </div>
  </div>
  <footer
    className="footer-bar"
  >
    <div
      className="footer-bar-content"
    >
      <a
        className="footer-link"
        href="https://dcl.gg/discord"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Discord.png"
        />
      </a>
      <a
        className="footer-link"
        href="https://www.reddit.com/r/decentraland/"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Reddit.png"
        />
      </a>
      <a
        className="footer-link"
        href="http://github.com/decentraland"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Git.png"
        />
      </a>
      <a
        className="footer-link"
        href="https://twitter.com/decentraland"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Twitter.png"
        />
      </a>
      <span
        className="footer-text"
      >
        © 2020 Decentraland
      </span>
    </div>
  </footer>
</div>
`;

exports[`Storyshots Explorer/Login Sign In Enable 1`] = `
<div
  className="login"
>
  <nav
    className="nav-bar"
  >
    <div
      className="nav-bar-content"
    >
      <div
        className="nav-text nav-need-support"
      >
        <span>
          Need support?
        </span>
      </div>
      <a
        className="nav-discord"
        href="https://dcl.gg/discord"
        target="about:blank"
      >
        <img
          alt="Discord"
          className="nav-discord-img"
          src="images/decentraland-connect/Discord.png"
        />
        <span
          className="nav-text nav-discord-text"
        >
          JOIN OUR DISCORD
        </span>
      </a>
    </div>
  </nav>
  <div
    className="eth-login-popup"
  >
    <img
      alt="Decentraland"
      className="eth-login-logo"
      src="images/decentraland-connect/Isologotipo.png"
    />
    <div
      className="eth-login-description"
    >
      Enter the first virtual world fully owned by its users.
    </div>
    <div
      id="eth-login-confirmation-wrapper"
    >
      <div
        className="eth-login-tos"
      >
        <input
          checked={true}
          className="eth-login-tos-agree"
          id="agree-check"
          type="checkbox"
        />
        <label
          className="eth-login-tos-label"
          htmlFor="agree-check"
        >
          I am of legal age and I have read and agree to the
           
          <a
            href="https://decentraland.org/terms"
            rel="noopener noreferrer"
            target="_blank"
          >
            Terms of Service
          </a>
           
          and
           
          <a
            href="https://decentraland.org/privacy"
            rel="noopener noreferrer"
            target="_blank"
          >
            Privacy Policy
          </a>
        </label>
      </div>
      <button
        className="eth-login-confirm-button1"
        disabled={false}
        id="eth-login-confirm-button"
      >
        Start Exploring
      </button>
    </div>
  </div>
  <footer
    className="footer-bar"
  >
    <div
      className="footer-bar-content"
    >
      <a
        className="footer-link"
        href="https://dcl.gg/discord"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Discord.png"
        />
      </a>
      <a
        className="footer-link"
        href="https://www.reddit.com/r/decentraland/"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Reddit.png"
        />
      </a>
      <a
        className="footer-link"
        href="http://github.com/decentraland"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Git.png"
        />
      </a>
      <a
        className="footer-link"
        href="https://twitter.com/decentraland"
        target="about:blank"
      >
        <img
          alt=""
          className="footer-icon"
          src="images/decentraland-connect/footer/Twitter.png"
        />
      </a>
      <span
        className="footer-text"
      >
        © 2020 Decentraland
      </span>
    </div>
  </footer>
</div>
`;

exports[`Storyshots Explorer/auth/EthConnectAdvice Template 1`] = `
Array [
  <div
    className="eth-login-description"
  >
    Please, follow the instructions provided by your Ethereum wallet provider to complete login.
    <br />
    To proceed, 
    <strong>
      login
    </strong>
     into your wallet and confirm with
     
    <strong>
      connecting
    </strong>
     to your Ethereum wallet extension.
  </div>,
  <button
    className="eth-login-confirm-button1"
  >
    <img
      alt=""
      className="eth-login-wallet-icon"
      src="images/decentraland-connect/walletIcon.png"
    />
    Connect wallet
  </button>,
]
`;

exports[`Storyshots Explorer/auth/EthLogin Template 1`] = `
Array [
  <div
    className="eth-login-description"
  >
    Enter the first virtual world fully owned by its users.
  </div>,
  <div
    id="eth-login-confirmation-wrapper"
  >
    <div
      className="eth-login-tos"
    >
      <input
        checked={true}
        className="eth-login-tos-agree"
        id="agree-check"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="eth-login-tos-label"
        htmlFor="agree-check"
      >
        I am of legal age and I have read and agree to the
         
        <a
          href="https://decentraland.org/terms"
          rel="noopener noreferrer"
          target="_blank"
        >
          Terms of Service
        </a>
         
        and
         
        <a
          href="https://decentraland.org/privacy"
          rel="noopener noreferrer"
          target="_blank"
        >
          Privacy Policy
        </a>
      </label>
    </div>
    <button
      className="eth-login-confirm-button1"
      disabled={false}
      id="eth-login-confirm-button"
      onClick={[Function]}
    >
      Start Exploring
    </button>
  </div>,
]
`;

exports[`Storyshots Explorer/auth/EthSignAdvice Template 1`] = `
Array [
  <div
    className="eth-login-description"
  >
    Please, follow the instructions provided by your Ethereum wallet provider to complete login.
  </div>,
  <div
    className="eth-login-description"
    style={
      Object {
        "marginTop": "10px",
      }
    }
  >
    To proceed, confirm 
    <strong>
      signing
    </strong>
     the following message in your wallet extension.
  </div>,
]
`;

exports[`Storyshots Explorer/auth/TermOfService Template 1`] = `
<div
  className="eth-login-tos"
>
  <input
    checked={false}
    className="eth-login-tos-agree"
    id="agree-check"
    type="checkbox"
  />
  <label
    className="eth-login-tos-label"
    htmlFor="agree-check"
  >
    I am of legal age and I have read and agree to the
     
    <a
      href="https://decentraland.org/terms"
      rel="noopener noreferrer"
      target="_blank"
    >
      Terms of Service
    </a>
     
    and
     
    <a
      href="https://decentraland.org/privacy"
      rel="noopener noreferrer"
      target="_blank"
    >
      Privacy Policy
    </a>
  </label>
</div>
`;

exports[`Storyshots Explorer/base/Audio Template 1`] = `
<audio
  autoPlay={true}
  loop={true}
>
  <source
    src="https://play.decentraland.org/tone4.mp3"
    type="audio/mpeg"
  />
</audio>
`;

exports[`Storyshots Explorer/base/Footer Template 1`] = `
<footer
  className="footer-bar"
>
  <div
    className="footer-bar-content"
  >
    <a
      className="footer-link"
      href="https://dcl.gg/discord"
      target="about:blank"
    >
      <img
        alt=""
        className="footer-icon"
        src="images/decentraland-connect/footer/Discord.png"
      />
    </a>
    <a
      className="footer-link"
      href="https://www.reddit.com/r/decentraland/"
      target="about:blank"
    >
      <img
        alt=""
        className="footer-icon"
        src="images/decentraland-connect/footer/Reddit.png"
      />
    </a>
    <a
      className="footer-link"
      href="http://github.com/decentraland"
      target="about:blank"
    >
      <img
        alt=""
        className="footer-icon"
        src="images/decentraland-connect/footer/Git.png"
      />
    </a>
    <a
      className="footer-link"
      href="https://twitter.com/decentraland"
      target="about:blank"
    >
      <img
        alt=""
        className="footer-icon"
        src="images/decentraland-connect/footer/Twitter.png"
      />
    </a>
    <span
      className="footer-text"
    >
      © 2020 Decentraland
    </span>
  </div>
</footer>
`;

exports[`Storyshots Explorer/base/Logo Template 1`] = `
<img
  alt="Decentraland"
  className="eth-login-logo"
  src="images/decentraland-connect/Isologotipo.png"
/>
`;

exports[`Storyshots Explorer/base/Navbar Template 1`] = `
<nav
  className="nav-bar"
>
  <div
    className="nav-bar-content"
  >
    <div
      className="nav-text nav-need-support"
    >
      <span>
        Need support?
      </span>
    </div>
    <a
      className="nav-discord"
      href="https://dcl.gg/discord"
      target="about:blank"
    >
      <img
        alt="Discord"
        className="nav-discord-img"
        src="images/decentraland-connect/Discord.png"
      />
      <span
        className="nav-text nav-discord-text"
      >
        JOIN OUR DISCORD
      </span>
    </a>
  </div>
</nav>
`;

exports[`Storyshots Explorer/base/Overlay Template 1`] = `
<div
  id="overlay"
/>
`;

exports[`Storyshots Explorer/base/Spinner Template 1`] = `
<div
  className="loader"
  id="eth-login-confirmation-spinner"
  style={
    Object {
      "display": "block",
    }
  }
>
   
</div>
`;
